Corrige nome ou adiciona playerCards.css

--- a/src/pages/biografia.css
+++ b/src/pages/biografia.css
@@ -11,7 +11,7 @@
   margin-bottom: 40px;
   color: #00bfff;
   text-transform: uppercase;
-  text-align: center; /* centraliza totalmente */
+  text-align: center;
   width: 100%;
 }
 
